ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.4.6, 2.5.1
    • Affects Version/s: 2.3.2
    • Component/s: None
    • None
    • Environment:
      Solaris 10
    • Fully Compatible
    • Solaris
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Mongod crashes

      it crashes with error in the log:
      ld.so.1: mongod: fatal: relocation error: file /opt/mongodb-sunos5-x86_64-2.2.1-rc0/bin/mongod: symbol posix_fadvise: referenced symbol not found
      version 2.2.0 - worked OK.

      All the log is the following:

      Tue Oct 16 09:23:26 [initandlisten] MongoDB starting : pid=29854 port=27017
      dbpath=/var/lib/mongodb 64-bit host=zimus2-10
      Tue Oct 16 09:23:26 [initandlisten]
      Tue Oct 16 09:23:26 [initandlisten] ** NOTE: your operating system version
      does not support the method that MongoDB
      Tue Oct 16 09:23:26 [initandlisten] ** uses to detect impending page
      faults.
      Tue Oct 16 09:23:26 [initandlisten] ** This may result in slower
      performance for certain use cases
      Tue Oct 16 09:23:26 [initandlisten]
      Tue Oct 16 09:23:26 [initandlisten] db version v2.2.1-rc0, pdfile version
      4.5
      Tue Oct 16 09:23:26 [initandlisten] git version:
      c8dadfd8f735e01d4d1c7435ab634c889a431674
      Tue Oct 16 09:23:26 [initandlisten] build info: SunOS
      bs-smartos-x86-64-1.10gen.cc 5.11 joyent_20120424T232010Z i86pc
      BOOST_LIB_VERSION=1_49
      Tue Oct 16 09:23:26 [initandlisten] options: { bind_ip: "10.0.0.21", config: "/etc/mongodb.conf", dbpath: "/var/lib/mongodb", logpath: "/var/log/mongodb/mongod.log", noauth: "true", oplogSize: 4096, pidfilepath: "/tmp/mongodb.pid", replSet: "some_replset", rest: "true" }
      Tue Oct 16 09:23:26 [initandlisten] journal dir=/var/lib/mongodb/journal
      Tue Oct 16 09:23:26 [initandlisten] recover : no journal files present, no
      recovery needed
      ld.so.1: mongod: fatal: relocation error: file
      /opt/mongodb-sunos5-x86_64-2.2.1-rc0/bin/mongod: symbol posix_fadvise:
      referenced symbol not found
      

            Assignee:
            Tad Marshall
            Reporter:
            Tatyana Knaifel
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: