src/mongo/db/extsort.cpp
@@ -35,6 +35,10 @@
 #include "mongo/db/namespace-inl.h"
 #include "mongo/util/file.h"
 
+#ifdef POSIX_FADV_SEQUENTIAL
+    #include "mongo/platform/posix_fadvise.h"
+#endif
+
 #if MONGO_USE_NEW_SORTER
 namespace mongo {
 
