src/mongo/tools/tool.cpp
@@ -18,23 +18,23 @@
 
 #include "mongo/tools/tool.h"
 
+#include <boost/filesystem/operations.hpp>
 #include <fstream>
 #include <iostream>
 
 #include "pcrecpp.h"
 
+#include "mongo/client/dbclient_rs.h"
 #include "mongo/client/sasl_client_authenticate.h"
 #include "mongo/db/auth/authorization_manager.h"
 #include "mongo/db/auth/authorization_manager_global.h"
 #include "mongo/db/auth/authz_manager_external_state_mock.h"
+#include "mongo/db/json.h"
 #include "mongo/db/namespace_details.h"
+#include "mongo/platform/posix_fadvise.h"
 #include "mongo/util/file_allocator.h"
 #include "mongo/util/password.h"
 #include "mongo/util/version.h"
-#include "mongo/client/dbclient_rs.h"
-#include "mongo/db/json.h"
-
-#include <boost/filesystem/operations.hpp>
 
 using namespace std;
 using namespace mongo;
